--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.0.1",
     "@types/uuid": "^7.0.0",
     "connected-react-router": "^6.7.0",
     "dotenv": "^8.2.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "sass": "^1.26.2",
+    "styled-components": "^5.0.1",
     "typescript": "^3.8.3"
   },
   "scripts": {
