--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-map-gl": "^5.2.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
@@ -13,8 +14,11 @@
     "@types/uuid": "^7.0.0",
     "connected-react-router": "^6.7.0",
     "dotenv": "^8.2.0",
+    "install": "^0.13.0",
+    "npm": "^6.14.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-map-gl": "^5.2.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
