--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-language": "^0.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -15,10 +16,13 @@
     "connected-react-router": "^6.7.0",
     "dotenv": "^8.2.0",
     "install": "^0.13.0",
+    "mapbox-gl": "^1.8.1",
     "npm": "^6.14.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-map-gl": "^5.2.3",
+    "react-mapbox-gl": "^4.8.2",
+    "react-mapbox-gl-language": "^1.0.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
