--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "weather-react-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": " https://armoteo.github.io/weather-react-web/",
   "dependencies": {
     "@mapbox/mapbox-gl-language": "^0.10.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -37,9 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.2.0"
   }
 }
